# renamex

./: .gitignore  Cargo.toml  README.md  __main__.py  pyproject.toml  requirements-dev.txt
.github/workflows/: main.yml
core/: constants.py
interfaces/: adapters.py  protocols.py
src/: clean.rs  cli.rs  constants.rs  error.rs  file_ops.rs  filter.rs  main.rs  transform.rs
tools/: cleaners.py  cli.py  filenames.py  filters.py  loggers.py  movers.py  transformers.py
