[package]
name = "renamex"
version = "0.3.0"
edition = "2024"
description = "A fast CLI tool to clean, normalize, and safely rename files in bulk"
license = "MIT"
repository = "https://github.com/avtomatik/renamex"
readme = "README.md"
keywords = ["cli", "rename", "files", "filesystem", "utility"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "renamex"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rayon = "1"
once_cell = "1"
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
