[project]
name = "fileworks"
version = "0.1.0"
description = "FileWorks is a powerful and flexible Python CLI tool for automating file system tasks. Whether you're syncing directories, renaming files with custom rules, or generating reports on file changes, FileWorks simplifies bulk file operations with ease and precision. Built for developers, sysadmins, and data wranglers who want control and clarity."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 79
select = ["E", "F", "I", "C"]  # E=pycodestyle, F=pyflakes, I=imports, C=complexity
